Fix navbar z-index

--- a/Metalog/src/sass/_components/_nav.scss
+++ b/Metalog/src/sass/_components/_nav.scss
@@ -12,6 +12,7 @@ $nav-bg: rgba($color-white, .6);
 	width: 100%;
 	left: 0;
 	top: 0;
+	z-index: 400;
 	// @include respond-to(xs) {
 	// 	position: static;
 	// 	background: $color-white;
