--- a/Metalog/src/sass/_components/_section.scss
+++ b/Metalog/src/sass/_components/_section.scss
@@ -1,7 +1,7 @@
 /* SECTION */
 
 .section {
-	padding: 50px 0;
+	padding: 70px 0;
 	position: relative;
 	@include respond-to(xs) {
 		padding: 25px 0;
